SERVER-8769 Track inserts on mongos for serverStatus().opcounters